@@ -47,7 +47,7 @@ tested) libraries such as OpenSSL should be used.
 Dirk Eddelbuettel, with contributions by Antoine Lucas, Jarek Tuszynski,
 Henrik Bengtsson, Simon Urbanek, Mario Frasca, Bryan Lewis, Murray Stokely,
 Hannes Muehleisen, Duncan Murdoch, Jim Hester, Wush Wu, Qiang Kou, Thierry
-Onkelinx, Michel Lang and Viliam Simko.
+Onkelinx, Michel Lang, Viliam Simko, Kurt Hornik and Radford Neal.
 
 ### License
 
