@@ -215,6 +215,8 @@ f06103773e8585df
 ef46db3751d8e999 
 > 
 > ## these outputs were calculated using mmh3 python package
+> ## the first two are also shown at this StackOverflow question on test vectors
+> ##   https://stackoverflow.com/questions/14747343/murmurhash3-test-vectors
 > murmur32Input <-
 +     c("abc",
 +       "abcdbcdecdefdefgefghfghighijhijkijkljklmklmnlmnomnopnopq",
