@@ -1,3 +1,9 @@
+2018-09-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/digest.c (digest): Six more #nocov tags
+
+	* README.md: Small edits
+
 2018-09-14  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
